Fixed Menu Gaps

--- a/SimpleMenu/wwwroot/css/menustyle.css
+++ b/SimpleMenu/wwwroot/css/menustyle.css
@@ -18,7 +18,9 @@ p{
 .menu-container{
     display:grid;
     grid-template-columns:1fr 1fr 1fr;
+    row-gap: 20px;
     column-gap: 25px;
+    
 }
 .dish-container {
     border: solid;
